Solve shrinking slogan on safari

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -63,6 +63,7 @@
   }
 
   &__slogan {
+    width: max-content;
     color: $color-purple-very-light;
     font-size: $font-size-2xl;
     font-weight: 700;
